--- a/templates/accountPageEdit.html
+++ b/templates/accountPageEdit.html
@@ -92,7 +92,7 @@
                                     <h6 class="mb-0">Address</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    <input type="text" name = "address" id = "address" class="form-control" value={{accountinfo[3]}}>
+                                    <input type="text" name = "address" id = "address" class="form-control" value="{{accountinfo[3]}}">
                                 </div>
                             </div>
                             <div class="row">
