--- a/templates/upload.html
+++ b/templates/upload.html
@@ -29,10 +29,10 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="myFiles.html">Files <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('myFiles')}}">Files <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="accountPage.html">Account <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('accountPage')}}">Account <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
@@ -50,11 +50,11 @@
                 </h6>
                 <form action = "{{ url_for('upload')}}" method = "post" enctype="multipart/form-data">
                 <div class="custom-file overflow-hidden rounded-pill mb-5">
-                    <input id="file" name = "file" type="file" class="custom-file-input rounded-pill">
+                    <input id="customFile" name = "file" type="file" class="custom-file-input rounded-pill">
                     <label for="customFile" class="custom-file-label rounded-pill">Choose file</label>
                 </div>
 
-                <input type ="submit" value = "Done" class="btn btn-primary btn-block"> </a>
+                <input type ="submit" value = "Done" class="btn btn-primary btn-block">
                 </form>
             </div>
         </div>
