--- a/templates/myFiles.html
+++ b/templates/myFiles.html
@@ -75,63 +75,7 @@
                 </div>
             </div>
             <div class="col-md-9 animated fadeInRight">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="file-box">
-                            <div class="file">
-                                <a href="#">
-                                    <span class="corner"></span>
-
-                                    <div class="icon">
-                                        <i class="fa fa-file"></i>
-                                    </div>
-                                    <div class="file-name">
-                                        Test1.doc
-                                        <br>
-                                        <small>Added: March 3, 2023</small>
-                                    </div>
-                                </a>
-                            </div>
-
-                        </div>
-                        <div class="file-box">
-                            <div class="file">
-                                <a href="#">
-                                    <span class="corner"></span>
-
-                                    <div class="image">
-                                        <img alt="image" class="img-responsive"
-                                            src="https://www.bootdey.com/image/400x300/87CEFA/000000">
-                                    </div>
-                                    <div class="file-name">
-                                        Test2.doc
-                                        <br>
-                                        <small>Added: March 3, 2023</small>
-                                    </div>
-                                </a>
-
-                            </div>
-                        </div>
-                        <div class="file-box">
-                            <div class="file">
-                                <a href="#">
-                                    <span class="corner"></span>
-
-                                    <div class="image">
-                                        <img alt="image" class="img-responsive"
-                                            src="https://www.bootdey.com/image/400x300/FF7F50/000000">
-                                    </div>
-                                    <div class="file-name">
-                                        Test3.doc
-                                        <br>
-                                        <small>Added: March 3, 2023</small>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
+                {{fileinfo | safe}}
             </div>
 
 </body>
