--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,7 +35,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="emails.html">
                     <i class='bx bx-envelope'></i>
                     <span class="links_name">Emails</span>
                 </a>
