--- a/templates/accountPageEdit.html
+++ b/templates/accountPageEdit.html
@@ -48,7 +48,7 @@
                                 <img src="{{ url_for('static',filename='images/blank-profile-picture.png')}}" class="rounded-circle" width="150">
                                 <div class="mt-3">
                                     <h4>{{accountinfo[0]}}</h4>
-                                    <p class="text-secondary mb-1">(OCCUPATION)</p>
+                                    <p class="text-secondary mb-1">{{userrole}}</p>
 
 
                                 </div>
