--- a/templates/accountPage.html
+++ b/templates/accountPage.html
@@ -153,6 +153,15 @@
                                 </div>
                                 <hr>
                                 <div class="row">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Gender</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        {{accountinfo[1]}}
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
                                     <div class="col-sm-12">
                                         <a class="btn btn-info " target="__blank"
                                             href="{{ url_for('accountPageEdit')}}">Edit</a>
