--- a/templates/accountPage.html
+++ b/templates/accountPage.html
@@ -145,7 +145,7 @@
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm-3">
-                                        <h6 class="mb-0">Birthday</h6>
+                                        <h6 class="mb-0">Date of Birth</h6>
                                     </div>
                                     <div class="col-sm-9 text-secondary">
                                         {{accountinfo[1]}}
