--- a/templates/accountPageEdit.html
+++ b/templates/accountPageEdit.html
@@ -103,7 +103,7 @@
                                 </div>
                                 <div class="row mb-3">
                                     <div class="col-sm-3">
-                                        <h6 class="mb-0">Birthday</h6>
+                                        <h6 class="mb-0">Date of Birth</h6>
                                     </div>
                                     <div class="col-sm-9 text-secondary">
                                         <input type="text" name="dateofbirth" id="dateofbirth" class="form-control"
