--- a/templates/accountPageEdit.html
+++ b/templates/accountPageEdit.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 
@@ -5,127 +7,189 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="{{ url_for('static',filename='CSS/account.css')}}" rel="stylesheet" />
-    <title>My Account</title>
+    <meta charset="UTF-8">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link href="{{ url_for('static',filename='CSS/files.css')}}" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>My Files</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{ url_for('start')}}">PARATUS</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav text-right ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('dashboard')}}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('why')}}">Why Paratus<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('aboutus')}}">About Us <span
-                            class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('myFiles')}}">Files <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('accountPage')}}">Account <span
-                            class="sr-only">(current)</span></a>
-                </li>
-            </ul>
+    <div class="sidebar">
+        <div class="logo-details">
+            <i class='bx bx-home-circle'></i>
+            <span class="logo_name">Paratus</span>
         </div>
-    </nav> <br> <br>
-    {% block content %}
-    <div class="container">
-        <div class="main-body">
-            <div class="row gutters-sm">
-                <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="d-flex flex-column align-items-center text-center">
-                                <img src="{{ url_for('static',filename='images/blank-profile-picture.png')}}"
-                                    class="rounded-circle" width="150">
-                                <div class="mt-3">
-                                    <h4>{{accountinfo[0]}}</h4>
-                                    <p class="text-secondary mb-1">{{userrole}}</p>
+        <ul class="nav-links">
+            <li>
+                <a href="{{ url_for('dashboard')}}">
+                    <i class='bx bx-grid-alt'></i>
+                    <span class="links_name">Dashboard</span>
+                </a>
+            </li>
+            <li>
+                <a href="{{ url_for('myFiles')}}" class="active">
+                    <i class='bx bx-file'></i>
+                    <span class="links_name">Files</span>
+                </a>
+            </li>
+            <li>
+                <a href="{{ url_for('calendar')}}">
+                    <i class='bx bx-calendar'></i>
+                    <span class="links_name">Calendar</span>
+                </a>
+            </li>
+            <li>
+                <a href="{{ url_for('scheduling')}}">
+                    <i class='bx bx-envelope'></i>
+                    <span class="links_name">Scheduling</span>
+                </a>
+            </li>
+            <li>
+                <a href="{{ url_for('report')}}">
+                    <i class='bx bx-chart'></i>
+                    <span class="links_name">Reports</span>
+                </a>
+            </li>
 
+            <li>
+                <a href="{{ url_for('accountPage')}}">
+                    <i class='bx bx-cog'></i>
+                    <span class="links_name">Settings</span>
+                </a>
+            </li>
+            <li class="log_out">
+                <a href="{{ url_for('logout')}}">
+                    <i class='bx bx-log-out'></i>
+                    <span class="links_name">Log out</span>
+                </a>
+            </li>
+        </ul>
+    </div>
 
+    <section class="home-section">
+        <nav>
+            <div class="sidebar-button">
+                <i class='bx bx-menu sidebarBtn'></i>
+                <span class="dashboard">Files</span>
+            </div>
+
+            <div class="logo-box">
+                <img src="{{ url_for('static',filename='images/paratuslogoicon.png')}}" alt="" class="center">
+            </div>
+
+            <div class=" profile-details">
+                <img src="{{ url_for('static',filename='images/blank-profile-picture.png')}}" alt="">
+                <span class="admin_name">{{username}}</span>
+
+            </div>
+        </nav>
+
+        {% block content %}
+        <div class="container">
+            <div class="main-body">
+                <div class="row gutters-sm">
+                    <div class="col-md-4 mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="d-flex flex-column align-items-center text-center">
+                                    <img src="{{ url_for('static',filename='images/blank-profile-picture.png')}}"
+                                        class="rounded-circle" width="150">
+                                    <div class="mt-3">
+                                        <h4>{{accountinfo[0]}}</h4>
+                                        <p class="text-secondary mb-1">{{userrole}}</p>
+    
+    
+                                    </div>
                                 </div>
                             </div>
                         </div>
+    
                     </div>
-
-                </div>
-                <div class="col-lg-8">
-                    <div class="card">
-                        <form action="{{ url_for('accountPageEdit')}}" method="post" autocomplete="off">
-
-                            <div class="card-body">
-                                <div class="row mb-3">
-                                    <div class="col-sm-3">
-                                        <h6 class="mb-0">Full Name</h6>
+                    <div class="col-lg-8">
+                        <div class="card">
+                            <form action="{{ url_for('accountPageEdit')}}" method="post" autocomplete="off">
+    
+                                <div class="card-body">
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">Full Name</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input type="text" name="name" id="name" class="form-control"
+                                                value={{accountinfo[0]}}>
+                                        </div>
                                     </div>
-                                    <div class="col-sm-9 text-secondary">
-                                        <input type="text" name="name" id="name" class="form-control"
-                                            value={{accountinfo[0]}}>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">Email</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input type="text" name="email" id="email" class="form-control"
+                                                value={{accountinfo[1]}}>
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">Phone</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input type="text" name="phone" id="phone" class="form-control"
+                                                value={{accountinfo[2]}}>
+                                        </div>
+                                    </div>
+    
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">Address</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input type="text" name="address" id="address" class="form-control"
+                                                value="{{accountinfo[3]}}">
+                                        </div>
+                                    </div>
+                                    <div class="row mb-3">
+                                        <div class="col-sm-3">
+                                            <h6 class="mb-0">Date of Birth</h6>
+                                        </div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input type="text" name="dateofbirth" id="dateofbirth" class="form-control"
+                                                value="{{accountinfo[3]}}">
+                                        </div>
+                                    </div>
+    
+                                    <div class="row">
+                                        <div class="col-sm-3"></div>
+                                        <div class="col-sm-9 text-secondary">
+                                            <input type="submit" class="btn btn-primary px-4" value="Save Changes">
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="row mb-3">
-                                    <div class="col-sm-3">
-                                        <h6 class="mb-0">Email</h6>
-                                    </div>
-                                    <div class="col-sm-9 text-secondary">
-                                        <input type="text" name="email" id="email" class="form-control"
-                                            value={{accountinfo[1]}}>
-                                    </div>
-                                </div>
-                                <div class="row mb-3">
-                                    <div class="col-sm-3">
-                                        <h6 class="mb-0">Phone</h6>
-                                    </div>
-                                    <div class="col-sm-9 text-secondary">
-                                        <input type="text" name="phone" id="phone" class="form-control"
-                                            value={{accountinfo[2]}}>
-                                    </div>
-                                </div>
-
-                                <div class="row mb-3">
-                                    <div class="col-sm-3">
-                                        <h6 class="mb-0">Address</h6>
-                                    </div>
-                                    <div class="col-sm-9 text-secondary">
-                                        <input type="text" name="address" id="address" class="form-control"
-                                            value="{{accountinfo[3]}}">
-                                    </div>
-                                </div>
-                                <div class="row mb-3">
-                                    <div class="col-sm-3">
-                                        <h6 class="mb-0">Date of Birth</h6>
-                                    </div>
-                                    <div class="col-sm-9 text-secondary">
-                                        <input type="text" name="dateofbirth" id="dateofbirth" class="form-control"
-                                            value="{{accountinfo[3]}}">
-                                    </div>
-                                </div>
-
-                                <div class="row">
-                                    <div class="col-sm-3"></div>
-                                    <div class="col-sm-9 text-secondary">
-                                        <input type="submit" class="btn btn-primary px-4" value="Save Changes">
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
-
+                            </form>
+    
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    {% endblock %}
+        {% endblock %}
+    <script>
+        let sidebar = document.querySelector(".sidebar");
+        let sidebarBtn = document.querySelector(".sidebarBtn");
+        sidebarBtn.onclick = function () {
+            sidebar.classList.toggle("active");
+            if (sidebar.classList.contains("active")) {
+                sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+            } else
+                sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+        }
+    </script>
+
+
 </body>
+
 
 </html>
