--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -143,7 +143,7 @@
 
 
                     <div class="button">
-                        <a href="#">Read More</a>
+                        <a href="https://paratusllc.org/news">Read More</a>
                     </div>
                 </div>
 
